Version 2.5.1
-------------
[workshop] Add exercise 1
15. Appium: log when appium is not running

Version 2.5.0
-------------
61. Telegram: improve navigating to home screen, lower sleep time when starting a call
59. WhatsApp: update support to 2.24.25.78

Version 2.4.0
-------------
57. Telegram: ending calls when not in an active call now raises an exception, add call status, bump adb-py to 1.0.3

Version 2.3.2
-------------
53. Telegram: Fix pictures could sometimes not be sent
51. Update appium-python-client version to 4.3.0

Version 2.3.1
-------------
49. Remove duplicate dependency of adb-py, bump adb-py to 1.0.2

Version 2.3.0
-------------
47. Add tests for versions being set correctly
45. Do no raise exception in telegram.end_call()
43. Add guidelines on creating test data
41. Add Google Maps documentation
38. Improve stability of sending Telegram pictures

Version 2.2.0
-------------
Add Google Maps support (based on v11.119.0101)
Update WhatsApp support to v2.24.20.89
Update Telegram support to v11.2.2
Add workshop files

Version 2.1.0
-------------
34. Update Appium python client to latest version (4.2), and make dependency more lenient
32. Allow Telegram package to be overwritten in constructor
30. Update Pillow and setuptools dependencies due to vulnerabilities

Version 2.0.1
-------------
Fix bug when starting appium session for specific packages

Version 2.0.0
-------------
28. Enable multiple Action objects using the same appium driver
25. Add support for GPS spoofing along a given route

Version 1.1.1
-------------
Always store video recordings when recording is stopped

Version 1.1.0
-------------
21. Improve README
17. Update app tags for app-unrelated changes
16. Telegram test: Remove duplicate alice and bob initialization
8. Make Snapchat tests more robusth
9. Install transitive dependencies
5. Fix links between README files