@@ -1,5 +1,6 @@
 Version 2.5.1
 -------------
+[workshop] Add exercise 4
 [workshop] Add exercise 1
 15. Appium: log when appium is not running
 
